# capstone-project-feb-2024-pt-giorgiozoppi

./: CapstoneProjectGiorgioZoppi.ipynb  DataExplationAndModel.ipynb  GiorgioZoppi_HotelRank_Capstone.docx  GiorgioZoppi_HotelRank_capstone_proposal.docx  GiorgioZoppi_HotelRank_capstone_proposal_1.docx  GiorgioZoppi_HotelRank_capstone_proposal_2.docx  README.md  capstone_proposal.docx  ethics_form.docx  filtered_data.parquet
hoteldataset/: Makefile  README.md  csv_to_parquet.py  dataset_hotel_10.csv  dataset_hotel_2.csv  dataset_hotel_4.csv  dataset_hotel_6.csv  dataset_hotel_7.csv  dataset_hotel_8.csv  go.mod  main.go  pyproject.toml
reviewscore/: review_05.csv  review_06.csv  review_100.csv  review_11.csv  review_12.csv  review_16.csv  review_18.csv  review_19.csv  review_24.csv  review_25.csv  review_26.csv  review_27.csv  review_28.csv  review_29.csv  review_30.csv
scraper/: README.md  hotel_input.csv  main.go
scraper/review_dataset/: dublin_hotel.csv  review_01.csv  review_02.csv  review_04.csv  review_08.csv  review_09.csv  review_103.csv  review_104.csv  review_105.csv  review_106.csv  review_11.csv  review_111.csv  review_113.csv  review_115.csv  review_117.csv  review_118.csv  review_119.csv  review_120.csv  review_121.csv  review_122.csv  review_123.csv  review_124.csv  review_125.csv  review_126.csv  review_127.csv  review_128.csv  review_129.csv  review_13.csv  review_130.csv  review_132.csv  review_133.csv  review_134.csv  review_135.csv  review_137.csv  review_138.csv  review_139.csv  review_14.csv  review_140.csv  review_141.csv  review_142.csv  (+97 more)
(+1 files in other folders)
