[tool.poetry]
name = "hoteldataset"
version = "0.1.0"
description = "Hotel DataSet"
authors = ["Giorgio Zoppi <giorgio.zoppi@yenflow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.3.4"
polars = "^0.20.16"
panda = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
